--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -9,6 +9,12 @@
   overflow: hidden;
 }
 
+@media (max-width: 768px) {
+  .app {
+    min-height: 120vh;
+  }
+}
+
 .background {
   position: fixed;
   inset: 0;
@@ -20,7 +26,8 @@
 
 @media (max-width: 768px) {
   .background {
-    min-height: 200vh;
+    position: absolute;
+    height: 120vh;
   }
 }
 
@@ -33,7 +40,7 @@
 
 @media (max-width: 768px) {
   .overlay {
-    min-height: 200vh;
+    height: 120vh;
   }
 }
 
@@ -67,7 +74,6 @@
 @media (max-width: 768px) {
   .main {
     padding: 5rem 1.5rem 6rem;
-    min-height: 200vh;
   }
 
   .main.albumMain {
