--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -73,8 +73,8 @@
 
 @media (max-width: 768px) {
   .main {
-    padding: 5rem 1.5rem 10rem;
-    min-height: 100vh;
+    padding: 5rem 1.5rem 2rem;
+    min-height: calc(100vh - 200px);
     align-items: center;
     justify-content: center;
   }
