--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -31,11 +31,16 @@
   }
   
   .app[data-home] .background {
+    display: none;
+  }
+  
+  .app[data-home] .main {
     background-image: 
       linear-gradient(120deg, rgba(12, 12, 16, 0.4), rgba(28, 28, 36, 0.3)),
       url('/media/mobile-hero-cover.jpg');
     background-position: center center;
     background-size: cover;
+    background-repeat: no-repeat;
   }
 }
 
